<resources>
    <string name="mp.app.name">Sweet Lullabies</string>

    <string name="mp.list.layoutManager.linear">LinearLayoutManager</string>

    <!-- Common -->

    <string name="mp.cancel">Cancel</string>
    <string name="mp.Confirm">Confirm</string>

    <!-- Activity/Fragment Titles -->
    <string name="mp.fragment.title.play_list">Play List</string>
    <string name="mp.fragment.title.music">Music</string>
    <string name="mp.fragment.title.local_files">Favorites</string>
    <string name="mp.fragment.title.settings">Timer</string>

    <string name="mp.activity.title.file_system">SDCard</string>

    <!-- Play Lists -->
    <string name="mp.play_list.favorite">Favorite</string>
    <string name="mp.play_list.footer.add">Add play list</string>
    <string name="mp.play_list.footer.end_summary_formatter">%d play lists in total</string>

    <string name="mp.play_list.create">Create play list</string>
    <string name="mp.play_list.created">%s created</string>
    <string name="mp.play_list.edit">Edit play list</string>
    <string name="mp.play_list.dialog.hint">Play list name</string>
    <string name="mp.play_list.dialog.add_to">Add to play list</string>

    <plurals name="mp_play_list_items_formatter">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <!-- Play Lists - Details -->
    <string name="mp.play_list.details.empty">No music here, go add some!</string>
    <string name="mp.play_list.details.footer.end_summary_formatter">%d songs in total</string>

    <!-- Main -->
    <string-array name="mp_main_titles">
        <item>@string/mp.fragment.title.play_list</item>
        <item>@string/mp.fragment.title.music</item>
        <item>@string/mp.fragment.title.local_files</item>
        <item>@string/mp.fragment.title.settings</item>
    </string-array>

    <!-- Music -->

    <string name="mp.music.default_duration">00:00</string>

    <!-- Local Files -->
    <string name="mp.local_files.segmented.all">All</string>
    <string name="mp.local_files.segmented.folder">Folder</string>

    <string name="mp.local_files.music_list.empty">No music found on this device</string>
    <string name="mp.local_files.music_list.end_summary_formatter">%d songs in total</string>
    <string name="mp.local_files.folder_list.end_summary_formatter">%d folders in total</string>
    <string name="mp.local_files.folder_list.item_info_formatter" formatted="false">%d songs | %s</string>
    <string name="mp.local_files.folder_list.add_folder">Add Folder</string>

    <string name="mp.local_files.file_system.empty">No files under this directory</string>
    <string name="mp.local_files.file_system.menu.done">Done</string>

    <!-- Local Files - File System -->
    <plurals name="mp_folders_created_formatter">
        <item quantity="one">%d new folder created</item>
        <item quantity="other">%d new folders created</item>
    </plurals>
    <plurals name="mp_directory_items_formatter">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <plurals name="mp_selected_folders_formatter">
        <item quantity="one">%d folder selected</item>
        <item quantity="other">%d folders selected</item>
    </plurals>

    <!-- Menu -->
    <string name="mp.menu.add_to_play_list">Add to play list</string>
    <string name="mp.menu.create_play_list">Create play list</string>
    <string name="mp.menu.refresh">Refresh</string>
    <string name="mp.menu.play_now">Play now</string>
    <string name="mp.menu.rename">Rename</string>
    <string name="mp.menu.delete">Delete</string>


    <string name="name1">Angel eyes</string>
    <string name="name2">Babies are a gift from God</string>
    <string name="name3">Sweet mystery of Life</string>
    <string name="name4">Bundle of Love!</string>
    <string name="name5">Daddy\'s Little Princess</string>
    <string name="name6">Future Ballerina</string>
    <string name="name7">I love my Mommy</string>
    <string name="name8">Little darling</string>
    <string name="name9">Nighty Night!</string>
    <string name="name10">Our New Love</string>
    <string name="name11">Sleepy time</string>
    <string name="name12">A Star is Born!</string>
    <string name="name13">A Double Blessing</string>
    <string name="off">Disabled</string>
    <string name="_15_minute">15 minutes</string>
    <string name="_30_minute">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_30_hour">1 hour 30 minutes</string>
    <string name="_2_hour">2 hours</string>
    <string name="set">Set</string>
    <string name="banner_ad_unit_id">ca-app-pub-7807956605870387/2744032353</string>
    <string name="msg_version">We\'ve updated the app for you, please update the application to receive great opportunities</string>
    <string name="ok_version" >Upgrade</string>
</resources>
