<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="16dp"
        >

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarmOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:background="#40000000"
            android:layout_margin="2dp"
            android:padding="6dp"
            android:text="@string/off"
            android:textColor="@color/white"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarmQuarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="6dp"
            android:layout_margin="2dp"
            android:textColor="@color/white"

            android:text="@string/_15_minute"
            android:background="#40000000"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarmHalf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/white"

            android:background="#40000000"
            android:text="@string/_30_minute"
            android:padding="6dp"

            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarmHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/white"

            android:background="#40000000"
            android:text="@string/_1_hour"
            android:padding="6dp"

            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarmHalfHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/white"

            android:background="#40000000"
            android:text="@string/_1_30_hour"
            android:padding="6dp"

            />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/alarm2Hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/white"

            android:background="#40000000"
            android:text="@string/_2_hour"
            android:padding="6dp"

            />

    </RadioGroup>
    <Button
        android:id="@+id/setAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/set"
        android:background="@android:color/darker_gray"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        />
</RelativeLayout>